# mf-auto-reg

./: .clinerules  .gitignore  LICENSE  README.md  architecture.md  development.mdc  gmail_to_moneyforward.py  jest.config.cjs  package-lock.json  package.json  pyproject.toml  run_tests.py  schema.sql  test_gmail_to_moneyforward.py  token.json  wrangler.toml
.cursor/rules/: basic.mdc  code-review.mdc  development.mdc  language.mdc
.github/ISSUE_TEMPLATE/: design-doc.md
.github/workflows/: ci.yml
coverage/: clover.xml  coverage-final.json  lcov.info
coverage/lcov-report/: index.html  parser.ts.html
docs/: architecture.md
docs/design/: 001-export-parser-tools.md  002-d1-client.md  template.md
src/lib/: d1Client.ts
src/mastra/: index.ts
src/mastra/tools/: index.ts  parser.ts
src/mf_auto_reg/: __init__.py  __main__.py  config.py  gmail_to_moneyforward.py
src/mf_auto_reg/processor/: transaction.py
tests/: __init__.py  conftest.py  test_decode_message.py  test_email_operations.py  test_extract_information.py  test_gmail_service.py  test_main.py  test_transaction.py
tests/tools/: parser.test.ts
tests/utils/: d1Client.integration.spec.ts  d1Client.spec.ts
